<resources>
    <string name="app_name">Sipen Diabetes</string>
    <string name="repeat">Ayo Cek Gula Darah mu!</string>
    <string name="Beranda">Beranda</string>
    <string name="Tambah">Tambah</string>
    <string name="Info">Info</string>
    <string name="Profil">Profil</string>

    <string-array name="status">
        <item>Belum Menikah</item>
        <item>Menikah</item>
    </string-array>

    <string-array name="aktivitas">
        <item>Sangat Ringan</item>
        <item>Ringan</item>
        <item>Sedang</item>
        <item>Berat</item>
    </string-array>

    <string-array name="pendidikan">
        <item>Tidak Sekolah</item>
        <item>SD</item>
        <item>SMP</item>
        <item>SMA</item>
        <item>Perguruan Tinggi</item>
    </string-array>

    <string-array name="pekerjaan">
        <item>Tidak Bekerja</item>
        <item>PNS/Pensiunan</item>
        <item>Swasta</item>
        <item>Petani</item>
        <item>Buruh</item>
        <item>Ibu Rumah Tangga</item>
    </string-array>

    <string name="info1">Diabetes melitus"/" kencing manis adalah gejala yang timbul pada seseorang yang mengalami meningkatan gula darah.
        Dikatakan diabetes apabila
    </string>
    <string name="info11">
        1. Kadar gula darah puasa ">" 126 mg"/"dl
    </string>
    <string name="info12">
        2. Kadar gula darah sewaktu ">" 200 mg/dl
    </string>
    <string name="info13">
        3. Kadar gulah darah 2 jam setelah makan ">" 200 ml"/"dl
    </string>

    <string name="info2_1">
        Mempertahankan kadar gula darah sampai normal/mendekati normal
    </string>

    <string name="info2_2">
        Memberi kecukupan energi untuk mempertahankan atau mencapai berat badan normal

    </string>

    <string name="info2_3">
        Menghindari atau menangani komplikasi

    </string>

    <string name="info2_4">
        Memberikan makanan sesuai kebutuhan

    </string>

    <string name="info31_1">
        Sumber karbohidrat komplek diantaranya nasi, kentang, singkong, ubi, dan sagu.
    </string>
    <string name="info31_2">
        Sumber protein rendah lemak. Jenis protein yang rendah lemak diantaranya adalah ikan, ayam tanpa kulit, tempe, tahu, dan kacang-kacangan
    </string>
    <string name="info31_3">
        Sumber lemak dalam jumlah terbatas yang di olah dengan cara dipanggang, dikukus, disetup, direbus, dan dibakar
    </string>

    <string name="info32_1">
        Mengandung banyak gula sederhana, Gula pasir dan gula jawa, sirup selai,, jeli, buah yang diawetkan dengan gula, susu kental manis, minuman botol ringan, dan eskrim.
        kue-kue manis, dodol, cake dan tart
    </string>

    <string name="info32_2">
        Mengandung banyak lemak, seperti cake, makan siap saji dan goreng-gorengan
    </string>

    <string name="info32_3">
        Mengandung banyak natrium, seperti ikan asin, telur asin, makanan yang diawetkan, makanan yang banyak mengandung MSG.
    </string>

    <string name="info4">
        Olahraga dapat dilakukan sebanyak (3"-"5 kali dalam seminggu selama sekitaran 30"-"45 menit dalam sehari dengan total 150 menit per minggu.
        Olahraga yang dianjurkan misalnya":"

    </string>

    <string name="info4_1">
        Bersepeda santai, jogging, jalan cepat dan berenang
    </string>

    <string name="info4_2">
        Olahraga bagi penderita DM yang relatif sehat bisa tingkatkan,
        sedangkan yang disertai kompikasi latihannya perlu dikurangi dan disesuaikan dengan masing-masing individu,
        dan bisa disesuaikan dengan anjuran dokter.
    </string>

</resources>
