<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MateriActivity"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar_info"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/apaitudiabetes"
                android:scaleType="centerInside"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Apa itu Diabetes Melitus?"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="20dp"
                android:paddingBottom="5dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info1"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp"
                android:paddingBottom="10dp"
                android:textSize="14sp"
                android:textColor="@color/text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info11"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="14sp"
                android:textColor="@color/text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info12"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="14sp"
                android:textColor="@color/text"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info13"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="14sp"
                android:textColor="@color/text"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>