<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Materi4Activity">

    <include
        layout="@layout/toolbar_info"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/olahraga"
                android:scaleType="centerCrop"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Olahraga"
                android:padding="20dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info4"
                android:paddingTop="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textSize="14sp"
                android:textColor="@color/text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info4_1"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textSize="14sp"
                android:textColor="@color/text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info4_2"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textSize="14sp"
                android:textColor="@color/text"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>