<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Materi2Activity">

    <include
        layout="@layout/toolbar_info"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/diet"
                android:scaleType="centerCrop"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tujuan Diet"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="20dp"
                android:paddingBottom="5dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/text"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="a."
                    android:paddingTop="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="10dp"
                    android:textSize="14sp"
                    android:textColor="@color/text"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info2_1"
                    android:paddingTop="10dp"
                    android:paddingRight="20dp"
                    android:textSize="14sp"
                    android:textColor="@color/text"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="b."
                    android:paddingTop="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="10dp"
                    android:textSize="14sp"
                    android:textColor="@color/text"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info2_2"
                    android:paddingRight="20dp"
                    android:paddingBottom="10dp"
                    android:textSize="14sp"
                    android:textColor="@color/text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="c."
                    android:paddingTop="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="10dp"
                    android:textSize="14sp"
                    android:textColor="@color/text"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info2_3"
                    android:textSize="14sp"
                    android:textColor="@color/text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="d."
                    android:paddingTop="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="10dp"
                    android:textSize="14sp"
                    android:textColor="@color/text"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info2_4"
                    android:textSize="14sp"
                    android:textColor="@color/text"/>
            </LinearLayout>





        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>